Подтягивание статистики и дальнейшая работа над проектом.

--- a/mailings/templates/mailings_app/includes/inc_base.html
+++ b/mailings/templates/mailings_app/includes/inc_base.html
@@ -5,6 +5,7 @@
 <a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:client_list' %}">Клиенты</a>
 <a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:message_list' %}">Сообщения</a>
 <a class="p-l-2 btn btn-outline-primary" href="#">Блог</a>
+<a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:logs_list' %}">Логи</a>
 {% else %}
 <a class="p-l-2 btn btn-outline-primary" href="{% url 'users:login' %}">Войти</a>
 <a class="p-l-2 btn btn-outline-primary" href="{% url 'users:register' %}">Регистрация</a>
